# DCRsystem_PC_app

./: .gitignore  README.md  cam_inside.pfs  cam_outside.pfs  cam_top.pfs  cam_under.pfs  first.py  main.py  main_5goki.py  main_Flask_GUI.py  main_ver3.py  module_cameras.py  module_cameras_5goki.py  module_cap_video.py  module_gui.py  module_patlite.py  module_patlite_kari.py  module_relay.py  module_view.py  module_yolo_csv.py  module_yolo_csv2.py  pyproject.toml  relay_module.py  requirements.txt
cam_pfs/: cam_inside.pfs  cam_top.pfs  cam_under.pfs
experiment/: HSV_check.py
sample_move_check/: cap_video_sample.py  patlite_move_check.py  relay_move_check.py
unused_file/: main_Flask_GUI.py
